==> HuGuoXuang/KunPeng/源代码/主板源码/szfk/ICM42688.cpp <==
#include "Arduino.h"
#include "ICM42688.h"
#include "registers.h"
#define SCL   33//13
#define SDA   25//15
#define INT1   27//0
#define ADO   23//2
#define INT2   18
#define CS   26

void ICM42688::setGyroNotchFilter(bool mode)
{
  if (mode) {
    gyroConfigStatic2.gyroNFDis = 0;
  } else {
    gyroConfigStatic2.gyroNFDis = 1;
  }
  uint8_t bank = 1;
  writeReg(REG_BANK_SEL, &bank, 1);
  writeReg(UB1_REG_GYRO_CONFIG_STATIC2, &gyroConfigStatic2, 1);
  bank = 0;
  writeReg(REG_BANK_SEL, &bank, 1);
}

int ICM42688::getAGT() {
  _useSPIHS = true; // use the high speed SPI for data readout
  // grab the data from the ICM42688
  if (readRegisters(UB0_REG_TEMP_DATA1, 14, _buffer) < 0) return -1;

  // combine bytes into 16 bit values
  int16_t rawMeas[7]; // temp, accel xyz, gyro xyz
  for (size_t i=0; i<7; i++) {
    rawMeas[i] = ((int16_t)_buffer[i*2] << 8) | _buffer[i*2+1];
  }

  _t = (static_cast<float>(rawMeas[0]) / TEMP_DATA_REG_SCALE) + TEMP_OFFSET;

  _acc[0] = ((rawMeas[1] * _accelScale) - _accB[0]) * _accS[0];
  _acc[1] = ((rawMeas[2] * _accelScale) - _accB[1]) * _accS[1];
  _acc[2] = ((rawMeas[3] * _accelScale) - _accB[2]) * _accS[2];

  _acc1[0] = (rawMeas[1] - _accB[0]) * _accS[0];
  _acc1[1] = (rawMeas[2] - _accB[1]) * _accS[1];
  _acc1[2] = (rawMeas[3] - _accB[2]) * _accS[2];

  _gyr[0] = (rawMeas[4] * _gyroScale) - _gyrB[0];
  _gyr[1] = (rawMeas[5] * _gyroScale) - _gyrB[1];
  _gyr[2] = (rawMeas[6] * _gyroScale) - _gyrB[2];

  _gyr1[0] = rawMeas[4] - _gyrB[0];
  _gyr1[1] = rawMeas[5] - _gyrB[1];
  _gyr1[2] = rawMeas[6] - _gyrB[2];


  return 1;
}

int ICM42688::calibrateAccel() {
  // set at a lower range (more resolution) since IMU not moving设置在较低的范围(更高的分辨率)，因为IMU不移动
  const AccelFS current_fssel = _accelFS;
  if (setAccelFS(gpm2) < 0) return -1;

  // take samples and find min / max取样本，找出最小/最大值
  _accBD[0] = 0;
  _accBD[1] = 0;
  _accBD[2] = 0;
  for (size_t i=0; i < NUM_CALIB_SAMPLES; i++) {
    getAGT();
    _accBD[0] += (accX()/_accS[0] + _accB[0]) / NUM_CALIB_SAMPLES;
    _accBD[1] += (accY()/_accS[1] + _accB[1]) / NUM_CALIB_SAMPLES;
    _accBD[2] += (accZ()/_accS[2] + _accB[2]) / NUM_CALIB_SAMPLES;
    delay(1);
  }
  if (_accBD[0] > 0.9f) 
  {
    _accMax[0] = _accBD[0];
  }
  if (_accBD[1] > 0.9f) 
  {
    _accMax[1] = _accBD[1];
  }
  if (_accBD[2] > 0.9f) 
  {
    _accMax[2] = _accBD[2];
  }
  if (_accBD[0] < -0.9f) 
  {
    _accMin[0] = _accBD[0];
  }
  if (_accBD[1] < -0.9f) 
  {
    _accMin[1] = _accBD[1];
  }
  if (_accBD[2] < -0.9f) 
  {
    _accMin[2] = _accBD[2];
  }
  Serial.println("\t");
  Serial.print(_accBD[0],6);
  Serial.print("\t");
  Serial.print(_accBD[1],6);
  Serial.print("\t");
  Serial.print(_accBD[2],6);
  Serial.print("\t");
  Serial.print(_accMax[0],6);
  Serial.print("\t");
  Serial.print(_accMax[1],6);
  Serial.print("\t");
  Serial.print(_accMax[2],6);
  Serial.print("\t");
  Serial.print(_accMin[0],6);
  Serial.print("\t");
  Serial.print(_accMin[1],6);
  Serial.print("\t");
  Serial.println(_accMin[2],6);

  
  // find bias and scale factor找出偏差和比例因子
  if ((abs(_accMin[0]) > 0.9f) && (abs(_accMax[0]) > 0.9f)) 
  {
    _accB[0] = (_accMin[0] + _accMax[0]) / 2.0f;
    _accS[0] = 1/((abs(_accMin[0]) + abs(_accMax[0])) / 2.0f);
  }
  if ((abs(_accMin[1]) > 0.9f) && (abs(_accMax[1]) > 0.9f)) 
  {
    _accB[1] = (_accMin[1] + _accMax[1]) / 2.0f;
    _accS[1] = 1/((abs(_accMin[1]) + abs(_accMax[1])) / 2.0f);
  }
  if ((abs(_accMin[2]) > 0.9f) && (abs(_accMax[2]) > 0.9f)) 
  {
    _accB[2] = (_accMin[2] + _accMax[2]) / 2.0f;
    _accS[2] = 1/((abs(_accMin[2]) + abs(_accMax[2])) / 2.0f);
  }

  Serial.print("\t");
  Serial.print(_accB[0],6);
  Serial.print("\t");
  Serial.print(_accS[0],6);
  Serial.print("\t");
  Serial.print(_accB[1],6);
  Serial.print("\t");
  Serial.print(_accS[10],6);
  Serial.print("\t");
  Serial.print(_accB[2],6);
  Serial.print("\t");
  Serial.println(_accS[2],6);

  // recover the full scale setting恢复满量程设置
  if (setAccelFS(current_fssel) < 0) return -4;
  return 1;
}

int ICM42688::writeRegister(uint8_t subAddress, uint8_t data) {
  /* write data to device */
  if( _useSPI ) {
    _spi->beginTransaction(SPISettings(SPI_LS_CLOCK, MSBFIRST, SPI_MODE3)); // begin the transaction
    digitalWrite(_csPin,LOW); // select the ICM42688 chip
    _spi->transfer(subAddress); // write the register address
    _spi->transfer(data); // write the data
    digitalWrite(_csPin,HIGH); // deselect the ICM42688 chip
    _spi->endTransaction(); // end the transaction
  }
  else{
    _i2c->beginTransmission(_address); // open the device
    _i2c->write(subAddress); // write the register address
    _i2c->write(data); // write the data
    _i2c->endTransmission();
  }

  delay(10);

  /* read back the register */
  readRegisters(subAddress, 1, _buffer);
  /* check the read back register against the written register */
  if(_buffer[0] == data) {
    return 1;
  }
  else{
    return -1;
  }
}

int ICM42688::readRegisters(uint8_t subAddress, uint8_t count, uint8_t* dest) {
  if( _useSPI ) {
    // begin the transaction
    if(_useSPIHS) {
      _spi->beginTransaction(SPISettings(SPI_HS_CLOCK, MSBFIRST, SPI_MODE3));
    }
    else{
      _spi->beginTransaction(SPISettings(SPI_LS_CLOCK, MSBFIRST, SPI_MODE3));
    }
    digitalWrite(_csPin,LOW); // select the ICM42688 chip
    _spi->transfer(subAddress | 0x80); // specify the starting register address
    for(uint8_t i = 0; i < count; i++) {
      dest[i] = _spi->transfer(0x00); // read the data
    }
    digitalWrite(_csPin,HIGH); // deselect the ICM42688 chip
    _spi->endTransaction(); // end the transaction
    return 1;
  }
  else{
    _i2c->beginTransmission(_address); // open the device
    _i2c->write(subAddress); // specify the starting register address
    _i2c->endTransmission(false);
    _numBytes = _i2c->requestFrom(_address, count); // specify the number of bytes to receive
    if (_numBytes == count) {
      for(uint8_t i = 0; i < count; i++) {
        dest[i] = _i2c->read();
      }
      return 1;
    } else {
      return -1;
    }
  }
}
