==> aoi-256/finani_ICM42688_for_STM32/src/ICM42688.cpp <==
#include "ICM42688.h"
#include "registers.h"
#include <math.h>
#include <cstring>
#define PI 3.14159

int ICM42688::getAGT() {  // modified to use getRawAGT()
	if (getRawAGT() < 0) {
		return -1;
	}

	_t = (static_cast<float>(_rawT) / TEMP_DATA_REG_SCALE) + TEMP_OFFSET;

	_acc[0] = ((_rawAcc[0] * _accelScale) - _accB[0]) * _accS[0];
	_acc[1] = ((_rawAcc[1] * _accelScale) - _accB[1]) * _accS[1];
	_acc[2] = ((_rawAcc[2] * _accelScale) - _accB[2]) * _accS[2];

	_gyr[0] = (_rawGyr[0] * _gyroScale) - _gyrB[0];
	_gyr[1] = (_rawGyr[1] * _gyroScale) - _gyrB[1];
	_gyr[2] = (_rawGyr[2] * _gyroScale) - _gyrB[2];

	return 1;
}

int ICM42688::calibrateAccel() {
	// set at a lower range (more resolution) since IMU not moving
	const AccelFS current_fssel = _accelFS;
	if (setAccelFS(gpm2) < 0) {
		return -1;
	}

	// take samples and find min / max
	_accBD[0] = 0;
	_accBD[1] = 0;
	_accBD[2] = 0;
	for (size_t i = 0; i < NUM_CALIB_SAMPLES; i++) {
		getAGT();
		_accBD[0] += (accX() / _accS[0] + _accB[0]) / NUM_CALIB_SAMPLES;
		_accBD[1] += (accY() / _accS[1] + _accB[1]) / NUM_CALIB_SAMPLES;
		_accBD[2] += (accZ() / _accS[2] + _accB[2]) / NUM_CALIB_SAMPLES;
		HAL_Delay(1);
	}
	if (_accBD[0] > 0.9f) {
		_accMax[0] = _accBD[0];
	}
	if (_accBD[1] > 0.9f) {
		_accMax[1] = _accBD[1];
	}
	if (_accBD[2] > 0.9f) {
		_accMax[2] = _accBD[2];
	}
	if (_accBD[0] < -0.9f) {
		_accMin[0] = _accBD[0];
	}
	if (_accBD[1] < -0.9f) {
		_accMin[1] = _accBD[1];
	}
	if (_accBD[2] < -0.9f) {
		_accMin[2] = _accBD[2];
	}

	// find bias and scale factor
	if ((abs(_accMin[0]) > 0.9f) && (abs(_accMax[0]) > 0.9f)) {
		_accB[0] = (_accMin[0] + _accMax[0]) / 2.0f;
		_accS[0] = 1 / ((abs(_accMin[0]) + abs(_accMax[0])) / 2.0f);
	}
	if ((abs(_accMin[1]) > 0.9f) && (abs(_accMax[1]) > 0.9f)) {
		_accB[1] = (_accMin[1] + _accMax[1]) / 2.0f;
		_accS[1] = 1 / ((abs(_accMin[1]) + abs(_accMax[1])) / 2.0f);
	}
	if ((abs(_accMin[2]) > 0.9f) && (abs(_accMax[2]) > 0.9f)) {
		_accB[2] = (_accMin[2] + _accMax[2]) / 2.0f;
		_accS[2] = 1 / ((abs(_accMin[2]) + abs(_accMax[2])) / 2.0f);
	}

	// recover the full scale setting
	if (setAccelFS(current_fssel) < 0) {
		return -4;
	}
	return 1;
}

int ICM42688::writeRegister(uint8_t subAddress, uint8_t data) {

    uint8_t tx_tmp[2] = {};

    tx_tmp[0] = (uint8_t)subAddress | 0x00;
    tx_tmp[1] = data;

    HAL_GPIO_WritePin(gpio_type, gpio_pin, GPIO_PIN_RESET);

	HAL_SPI_Transmit(spi_pin, tx_tmp, 2, 10);

	HAL_GPIO_WritePin(gpio_type, gpio_pin, GPIO_PIN_SET);

	return 1;
}

int ICM42688::readRegisters(uint8_t subAddress, uint8_t count, uint8_t* dest) {

    uint8_t rx_tmp[2] = {};
    uint8_t tx_tmp[2] = {};

    for(uint8_t i = 0; i < count; i++){

        tx_tmp[0] = (uint8_t(subAddress) + i) | 0x80;
        tx_tmp[1] = 0x00;

        HAL_GPIO_WritePin(gpio_type, gpio_pin, GPIO_PIN_RESET);

        HAL_SPI_TransmitReceive(spi_pin, tx_tmp, rx_tmp, 2, 10);

        HAL_GPIO_WritePin(gpio_type, gpio_pin, GPIO_PIN_SET);

        dest[i] = rx_tmp[1];
    }

    return 1;
}

int ICM42688::setGyroNotchFilter(float gyroNFfreq_x, float gyroNFfreq_y, float gyroNFfreq_z, GyroNFBWsel gyro_nf_bw) {
	setBank(3);
	// get clock div
	uint8_t reg;
	if (readRegisters(UB0_REG_GYRO_CONFIG0, 1, &reg) < 0) {
		return -1;
	}
	uint8_t clkdiv = reg & 0x3F;
	setBank(1);
	uint16_t nf_coswz;
	//uint8_t nf_coswz_sel = 0;
	uint8_t     gyro_nf_coswz_low[3] = {0};
	uint8_t     buff                 = 0;
	float       Fdrv                 = 19'200 / (clkdiv * 10.0f);          // in kHz  (19.2MHz = 19200 kHz)
	const float fdesired[3] = {gyroNFfreq_x, gyroNFfreq_y, gyroNFfreq_z};  // in kHz - fesdeired between 1kz and 3 kHz
	// float coswz = 0;
	for (size_t ii = 0; ii < 3; ii++) {
		float coswz = cos(2 * PI * fdesired[ii] / Fdrv);
		if (coswz <= 0.875) {
			nf_coswz              = (uint16_t)round(coswz * 256);
			gyro_nf_coswz_low[ii] = (uint8_t)(nf_coswz & 0x00FF);    //take lower part
			buff = buff & (((nf_coswz & 0xFF00) >> 8) << ii);        //take upper part and concatenate in the buffer
		} else {
			buff = buff & (1 << (3 + ii));                           //nf_coswz_sel =  nf_coswz_sel & (1<<(3+ii));
			if (coswz > 0.875) {
				nf_coswz              = (uint16_t)round(8 * (1 - coswz) * 256);
				gyro_nf_coswz_low[ii] = (uint8_t)(nf_coswz & 0x00FF);  //take lower part
				buff = buff & (((nf_coswz & 0xFF00) >> 8) << ii);      //take upper part and concatenate in the buffer
			} else if (coswz < -0.875) {
				nf_coswz              = (uint16_t)round(-8 * (1 - coswz) * 256);
				gyro_nf_coswz_low[ii] = (uint8_t)(nf_coswz & 0x00FF);  //take lower part
				buff = buff & (((nf_coswz & 0xFF00) >> 8) << ii);      //take upper part and concatenate in the buffer}
			}
		}
	}
	// write to the Registers
	if (writeRegister(UB1_REG_GYRO_CONFIG_STATIC6, gyro_nf_coswz_low[0]) < 0) {
		return -2;
	}
	if (writeRegister(UB1_REG_GYRO_CONFIG_STATIC7, gyro_nf_coswz_low[1]) < 0) {
		return -2;
	}
	if (writeRegister(UB1_REG_GYRO_CONFIG_STATIC8, gyro_nf_coswz_low[2]) < 0) {
		return -2;
	}
	if (writeRegister(UB1_REG_GYRO_CONFIG_STATIC9, buff) < 0) {
		return -2;
	}
	if (writeRegister(UB1_REG_GYRO_CONFIG_STATIC10, gyro_nf_bw) < 0) {
		return -2;
	}
	//Set Bank 0 to allow data measurements
	setBank(0);
	return 1;
}
